--- a/doc/proyectdoc/memoria.tex
+++ b/doc/proyectdoc/memoria.tex
@@ -382,7 +382,7 @@
 
 \noindent\includegraphics[width=\textwidth]{cabecera}\vspace{1cm}
 
-\noindent D. \profesor , profesor del departamento de ingeniería civil, área de lenguajes y sistemas informáticos.
+\noindent Dr. D. Raúl Marticorena Sánchez , profesor del departamento de ingeniería civil, área de lenguajes y sistemas informáticos.
 
 \noindent Expone:
 
@@ -400,7 +400,7 @@ En Burgos, {\large \today}
 \begin{minipage}{0.45\textwidth}
 \begin{flushleft} %\large
 Vº. Bº. del Tutor:\\[2cm]
-D. \profesor
+Dr. D. Raúl Marticorena Sánchez
 \end{flushleft}
 \end{minipage}
 \hfill
