--- a/doc/proyectdoc/tex/6_Trabajos_relacionados.tex
+++ b/doc/proyectdoc/tex/6_Trabajos_relacionados.tex
@@ -4,13 +4,13 @@
 
 Esta aplicación es el TFG de Claudia Martinez Herrero \cite{claudia} del que se ha partido para hacer nuestra aplicación.
 
-En esta aplicación se recolectan os datos del Web Service de Moodle para sacar gráficas con las notas de los alumnos de la plataforma UBUVirtual.
+En esta aplicación se recolectan los datos del Web Service de Moodle para sacar gráficas con las notas de los alumnos de la plataforma UBUVirtual.
 
 \section{Heatmap}\label{heatmap}
 
-\href{https://moodle.org/plugins/block_heatmap}{\emph{Heatmap}} es un plugin de Moodle que nos permite hacer mapas de calor dependiendo de el numero de interacciones que hayan hecho los participantes.
+\href{https://moodle.org/plugins/block_heatmap}{\emph{Heatmap}} es un plugin de Moodle que nos permite hacer mapas de calor dependiendo del numero de interacciones que hayan hecho los participantes.
 
-Este plugin esta inspirado en \emph{Moodle Activity Viewer}.
+Este plugin está inspirado en \emph{Moodle Activity Viewer}.
 
 \section{ Moodle Activity Viewer}\label{moodle-activity-viewer}
 
