--- a/doc/proyectdoc/tex/E_Manual_usuario.tex
+++ b/doc/proyectdoc/tex/E_Manual_usuario.tex
@@ -32,6 +32,8 @@ En el caso que queramos ejecutarlo desde la consola deberemos abrirla, movernos 
 
 \imagen{execut}{Ejecución UBULog.}{0.9}
 
+IMPORTANTE: Se ha detectado que la librería Java FX da errores con algunas versiones de Java 8 cuando intenta mostrar las tablas de log y el gráfico, hay que tener instalado las ultimas versiones.
+
 \subsection{Descargar el log manualmente}
 
 Para descargar el log manualmente deberemos ir a UBUVirtual, iniciar sesión y irnos a la asignatura deseada. Una vez allí en la parte de administración de la asignatura deberemos pinchar en ``Registros''.
