--- a/doc/proyectdoc/tex/6_Trabajos_relacionados.tex
+++ b/doc/proyectdoc/tex/6_Trabajos_relacionados.tex
@@ -2,19 +2,19 @@
 
 \section{UBUGrades 1.0}\label{ubugrades--10}
 
-Esta aplicación es el TFG de Claudia Martinez Herrero \cite{claudia} del que se ha partido para hacer nuestra aplicación.
+Esta aplicación es el TFG de Claudia Martínez Herrero \cite{claudia} del que se ha partido para hacer nuestra aplicación.
 
 En esta aplicación se recolectan los datos del Web Service de Moodle para sacar gráficas con las notas de los alumnos de la plataforma UBUVirtual.
 
 \newpage\section{Heatmap}\label{heatmap}
 
-\href{https://moodle.org/plugins/block_heatmap}{\emph{Heatmap}} es un plugin de Moodle que nos permite hacer mapas de calor dependiendo del numero de interacciones que hayan hecho los participantes.
+\href{https://moodle.org/plugins/block_heatmap}{\emph{Heatmap}} es un plugin de Moodle que nos permite hacer mapas de calor dependiendo del número de interacciones que hayan hecho los participantes.
 
 Este plugin está inspirado en \emph{Moodle Activity Viewer}.
 
 \imagen{heatmap}{Plugin Heatmap}{0.7}
 
-Aunque nuestra aplicación no hace mapas de calor de las actividades realizadas, podemos generar un gráfico y ver más detalladamente las iteraciones que hace el usuario en las diferentes actividades y saber cuando lo ha hecho y cuantas veces, también podemos ver todas las interacciones en la tabla de log de una manera mas específica.
+Aunque nuestra aplicación no hace mapas de calor de las actividades realizadas, podemos generar un gráfico y ver más detalladamente las iteraciones que hace el usuario en las diferentes actividades y saber cuando lo ha hecho y cuántas veces, también podemos ver todas las interacciones en la tabla de log de una manera más específica.
 
 
 \newpage\section{ Moodle Activity Viewer}\label{moodle-activity-viewer}
